--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "indecision-app",
   "version": "1.0.0",
-  "main": "index.js",
   "license": "MIT",
   "scripts": {
+    "start": "react-scripts start",
     "build": "webpack",
     "dev-server": "webpack-dev-server"
   },
@@ -13,18 +13,20 @@
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2"
   },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "devDependencies": {
-    "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.11.1",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-react": "^7.10.4",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^4.2.0",
     "node-sass": "^4.14.1",
-    "sass-loader": "^9.0.3",
-    "style-loader": "^1.2.1",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "react-scripts": "^3.4.1"
   }
 }
