--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     ]
   },
   "devDependencies": {
+    "@types/react": "^16.9.44",
+    "@types/react-dom": "^16.9.8",
     "node-sass": "^4.14.1",
-    "react-scripts": "^3.4.1"
+    "react-scripts": "^3.4.1",
+    "typescript": "^3.9.7"
   }
 }
