--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "react-scripts start",
-    "build": "webpack",
-    "dev-server": "webpack-dev-server"
+    "lint": "eslint src/**/*.ts src/**/*.tsx"
   },
   "dependencies": {
     "@types/react-modal": "^3.10.6",
@@ -29,6 +28,11 @@
   "devDependencies": {
     "@types/react": "^16.9.44",
     "@types/react-dom": "^16.9.8",
+    "@typescript-eslint/eslint-plugin": "^3.8.0",
+    "@typescript-eslint/parser": "^3.8.0",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-react": "^7.20.5",
     "node-sass": "^4.14.1",
     "react-scripts": "^3.4.1",
     "typescript": "^3.9.7"
