--- a/Indecision App/ClientApp/package.json
+++ b/Indecision App/ClientApp/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "scripts": {
     "start": "react-scripts start",
+    "build": "react-scripts build",
     "lint": "eslint src/**/*.ts src/**/*.tsx"
   },
   "dependencies": {
