--- a/Indecision App/appsettings.json
+++ b/Indecision App/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=IndecisionApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=tcp:indecision-app.database.windows.net,1433;Initial Catalog=Indecision;User Id=indecisionapp2020@indecision-app;Password=IndecisionApp.2020"
   },
   "Logging": {
     "LogLevel": {
