--- a/Indecision App/ClientApp/package.json
+++ b/Indecision App/ClientApp/package.json
@@ -8,14 +8,19 @@
     "lint": "eslint src/**/*.ts src/**/*.tsx"
   },
   "dependencies": {
+    "@types/history": "^4.7.7",
     "@types/react-modal": "^3.10.6",
+    "@types/react-router-dom": "^5.1.5",
     "bootstrap": "^4.5.2",
     "devextreme": "20.1",
     "devextreme-react": "20.1",
-    "normalize.css": "^8.0.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
-    "react-modal": "^3.11.2"
+    "react-modal": "^3.11.2",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0"
   },
   "browserslist": {
     "production": [
